# Floor_ID

./: .gitignore  README  buildAndLoadSingleFloorFrame.m  buildFullFloorAlt2.m  customImRead.m  demo.m  demoGUI.fig  demoGUI.m  evalAllGT.m  evalSegGT.m  license.txt  mainRun.m  overlay.m  overlay3.m  preprocessData.sh  processVPFile.m  removeShadows.m  vizLabels.m  vizResults.m  vizSeg.m
cpp/: CMakeLists.txt  CommonFunctions.cpp  IDVanPoint.cpp  README  README~  SingleFrameExtraction.cpp  XYZFloorIDInc.cpp  nestk
gsc-1.2/: buildFullFloor.m  buildFullFloor.m~  buildFullFloor2.m  buildFullFloor2.m~  setup.m  singleSegRun.m  singleSegRun.m~
samples/: script.sh
samples/output/imgs/: 54.flr  54.flr.mat  54.van
samples/rgbd-demo-data/view0031/raw/: depth.raw
samples/rgbd-demo-data/view0044/raw/: depth.raw
samples/rgbd-demo-data/view0046/raw/: depth.raw
